maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:11: error: ')' expected but ',' found.
  for (i <- 0 to largeur-1, j <- 0 to hauteur-1) {
                          ^ShortestPathMaze:17: error: illegal start of simple expression
} 
^